--- a/talks/04_05-04-2016.md
+++ b/talks/04_05-04-2016.md
@@ -1,1 +1,7 @@
 
+###Outline
+
+- [Inline Method](https://github.com/bhushan-firake/tea-talk/blob/master/book/chapter2-%20Removing%20bad%20smells%20from%20code/2.1_inline_method.md)
+- DTO Introduction
+    1. No Methods
+    2. No constructors with parameters
