--- a/talks/06_07-04-2016.md
+++ b/talks/06_07-04-2016.md
@@ -1,6 +1,6 @@
 ###Outline
 
 - Simplifying Conditional Expressions
-    1. Decompose Conditional Expression
-    2. Consolidate Conditional Expression
-    3. Anding Conditions
+    1. [Decompose Conditional Expression](https://github.com/bhushan-firake/tea-talk/blob/master/book/chapter2-%20Removing%20bad%20smells%20from%20code/03_simplifying_conditional_expressions.md#decompose-conditional)
+    2. [Consolidate Conditional Expression](https://github.com/bhushan-firake/tea-talk/blob/master/book/chapter2-%20Removing%20bad%20smells%20from%20code/03_simplifying_conditional_expressions.md#consolidate-conditional-expression)
+    3. [Anding Conditions](https://github.com/bhushan-firake/tea-talk/blob/master/book/chapter2-%20Removing%20bad%20smells%20from%20code/03_simplifying_conditional_expressions.md#anding-conditional-expressions)
